修改编译选项,兼容 multiple definition of 问题

--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,48 @@
-adlist.o
-ae.o
-anet.o
-dict.o
-linenoise.o
-lzf_c.o
-lzf_d.o
-pqsort.o
-redis-benchmark
-redis-benchmark.o
-redis-check-aof
-redis-check-aof.o
-redis-check-dump
-redis-check-dump.o
-redis-cli
-redis-cli.o
-redis-server
-redis.o
-release.h
-sds.o
-sha1.o
-zipmap.o
-zmalloc.o
 compile_commands.json
+deps/linenoise/example.o
+src/aof.o
+src/config.o
+src/db.o
+src/debug.o
+src/intset.o
+src/multi.o
+src/networking.o
+src/object.o
+src/pubsub.o
+src/rdb.o
+src/release.o
+src/replication.o
+src/slowlog.o
+src/sort.o
+src/syncio.o
+src/t_hash.o
+src/t_list.o
+src/t_set.o
+src/t_string.o
+src/t_zset.o
+src/util.o
+src/vm.o
+src/ziplist.o
+deps/linenoise/linenoise.o
+src/adlist.o
+src/ae.o
+src/anet.o
+src/dict.o
+src/lzf_c.o
+src/lzf_d.o
+src/pqsort.o
+src/redis-benchmark
+src/redis-benchmark.o
+src/redis-check-aof
+src/redis-check-aof.o
+src/redis-check-dump
+src/redis-check-dump.o
+src/redis-cli
+src/redis-cli.o
+src/redis-server
+src/redis.o
+src/release.h
+src/sds.o
+src/sha1.o
+src/zipmap.o
+src/zmalloc.o
